--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: npm ci --prefix docs # or pnpm install --prefix docs / yarn install --cwd docs / bun install --prefix docs
+        run: npm i --prefix docs # or pnpm install --prefix docs / yarn install --cwd docs / bun install --prefix docs
       - name: Build with VitePress
         run: npm run docs:build --prefix docs # or pnpm docs:build --prefix docs / yarn docs:build --cwd docs / bun run docs:build --prefix docs
       - name: Upload artifact
