--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@antfu/eslint-config": "^4.14.1",
     "@ark/attest": "^0.48.2",
     "@types/mocha": "^10.0.10",
+    "elysia": "^1.3.5",
     "eslint": "^9.29.0",
     "mocha": "^11.7.0",
     "tsx": "^4.20.3",
