--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,5 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "**/*.test.ts", "**/*.benchmark.ts"]
+  "include": ["src"]
 }
